<resources>
    <string name="app_name">Firebase Product Tester</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Dont\'t have an account</string>
    <string name="register"><u>Register</u></string>
    <string name="password">Password</string>
    <string name="email">abc@gmail.com</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>

    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>

    <string name="i_agree_to_the_terms_and_condition">I Agree to the <u>Terms and Condition</u></string>
    <string name="btn_lbl_register">Register</string>

    <string name="already_have_an_account">Already have an account</string>
    <string name="login">Login</string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter Email.</string>
    <string name="err_msg_enter_password">Please enter Password.</string>
    <string name="err_msg_confirm_password">Please Confirm Password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and Confirmation Password Mismatch</string>
    <string name="err_msg_agree_terms_and_condition">Please agree to the Terms and Conditions.</string>
    <string name="register_successful">you have successfully registered </string>
    <string name="err_msg_mobile_number">Please Enter mobile number</string>

    <string name="please_wait">Please Wait</string>

    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_sucess">"Email sent successfully to reset your password</string>

    <string name="title_complete_profile">Complete Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">SAVE</string>

    <string name="read_storage_permission_denied">Ooops, you just denied the permission for storage.</string>
    <string name="image_selection_failed">Image selection failed</string>

    <string name="msg_profile_update_success">You profile has been updated successfully</string>
    <!--- <string name="title_activity_dashboard">DashboardActivity</string> -->
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>

    <string name="product_load_failed">you have failed in oading the product details</string>

    <string name="banking_card">banking Card</string>
    <string name="shopping_cart">Cart</string>
    <string name="messages">Messages</string>
    <string name="wish_list">Wish list</string>
    <string name="quick_exit">Exit</string>

    <string name="john">John</string>
    <string name="jane">Jane</string>
    <string name="doe">Doe</string>
    <string name="phone_number">012 345 6789</string>
    <string name="address">1234 Area, City, Code</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_cart">Shopping cart</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_user_profile_details">User Profile Details</string>

    <string name="textView_cart_title">Item Title</string>

    <string name="product_name">Product Name</string>
    <string name="selling_price">Selling Price</string>
    <string name="shipping_cost_int">Shipping Cost /International</string>
    <string name="shipping_cost_rsa">Shipping Cost /RSA</string>
    <string name="err_msg_list_price">Please enter list price</string>
    <string name="err_msg_selling_price">Please enter selling price</string>
    <string name="err_msg_product_name">enter a product name</string>

</resources>