<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:context=".ui.activities.activities.SettingsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="@dimen/toolbar_title_paddingStart"
                    android:paddingEnd="0dp"
                    android:text="@string/title_settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/toolbar_title_text_size"
                    android:textStyle="bold" /> -->

    </androidx.appcompat.widget.Toolbar>


    <com.example.firebaseproducttester.Utils.MSPTextViewBold
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:layout_marginStart="59dp"
        android:background="@drawable/item_grey_border_background"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:paddingStart="@dimen/settings_edit_label_marginStartEnd"
        android:paddingTop="@dimen/settings_edit_label_marginTopBottom"
        android:paddingEnd="@dimen/settings_edit_label_marginStartEnd"
        android:paddingBottom="@dimen/settings_edit_label_marginTopBottom"
        android:text="@string/lbl_edit"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/settings_edit_label_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/iv_user_photo"
        app:layout_constraintTop_toTopOf="@+id/tv_name" />


    <com.example.firebaseproducttester.Utils.MSPTextViewBold
        android:id="@+id/tv_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="+27 12 345 6789"
        android:textColor="@color/ColorLightGrey"
        android:textSize="@dimen/settings_info_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    <ImageView
        android:id="@+id/iv_user_photo"
        android:layout_width="171dp"
        android:layout_height="128dp"
        android:layout_margin="@dimen/settings_user_picture_margin"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_settings_activity" />

    <com.example.firebaseproducttester.Utils.MSPTextViewBold
        android:id="@+id/tv_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="Male / Female"
        android:textColor="@color/ColorLightGrey"
        android:textSize="@dimen/settings_name_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mobile_number" />

    <com.example.firebaseproducttester.Utils.MSPTextViewBold
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="John/Jane.Doe@gmail.com"
        android:textColor="@color/ColorLightGrey"
        android:textSize="@dimen/settings_info_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <LinearLayout
        android:id="@+id/ll_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_mobile_number"
        android:layout_margin="@dimen/settings_address_margin"
        android:layout_marginTop="32dp"
        android:background="@drawable/item_grey_border_background"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/settings_address_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gender">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description"
            android:src="@drawable/ic_baseline_keyboard_arrow_right" />

        <com.example.firebaseproducttester.Utils.MSPTextViewBold
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/settings_lbl_addresses_margin"
            android:layout_weight="1"
            android:text="@string/lbl_addresses"
            android:textColor="@color/ColorLightGrey"
            android:textSize="@dimen/settings_lbl_addresses_textSize" />

    </LinearLayout>

    <com.example.firebaseproducttester.Utils.MSPTextViewBold
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="John / Jane Joe"
        android:textColor="@color/ColorLightGrey"
        android:textSize="@dimen/settings_name_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_photo" />

    <com.example.firebaseproducttester.Utils.MSPButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/btn_lbl_logout"
        android:textColor="@color/white"
        android:textSize="@dimen/btn_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_address" />


</androidx.constraintlayout.widget.ConstraintLayout>